Bug 301342 - Bug duplicating a hidden shape layer
Summary: Bug duplicating a hidden shape layer
Status: CLOSED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-07 10:27 UTC by animtim
Modified: 2012-06-27 12:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description animtim 2012-06-07 10:27:03 UTC
If I duplicate a shape layer while it's hidden, the result layer dosn't show up when toggle it visible.


Reproducible: Always

Steps to Reproduce:
1.Create a shape layer with a shape on it
2.Hide it (click the eye icon)
3.Duplicate it
4.Click the eye icon on the new layer
Actual Results:  
The shape on the new layer is not visible.

Expected Results:  
Shapes inside the layer should be visible.
Comment 1 Halla Rempt 2012-06-27 09:16:05 UTC
Ack, thanks for the report. The shape is actually not copied if the master shape is invisible.
Comment 2 Sven Langkamp 2012-06-27 10:24:40 UTC
It appears to be copied as I can select the shape on the layer and it becomes visible when I move it. Maybe it's not painted on the paintdevice if the shape container is invisible.
Comment 3 Halla Rempt 2012-06-27 11:54:04 UTC
hm, but the new shape container _is_ visible.
Comment 4 Halla Rempt 2012-06-27 12:06:41 UTC
Git commit 52fb547bd1759d478fc1025f40f3c9597e8ac4e9 by Boudewijn Rempt.
Committed on 27/06/2012 at 14:05.
Pushed by rempt into branch 'calligra/2.5'.

Make sure duplicated vector layers are always visible

Even if the layer we are a duplicate of isn't visible.

M  +4    -0    krita/ui/flake/kis_shape_layer.cc

http://commits.kde.org/calligra/52fb547bd1759d478fc1025f40f3c9597e8ac4e9
Comment 5 Halla Rempt 2012-06-27 12:08:40 UTC
Git commit 295a0039e8d7d83ebeb7fcca77759ad0bfe9b32c by Boudewijn Rempt.
Committed on 27/06/2012 at 14:05.
Pushed by rempt into branch 'master'.

Make sure duplicated vector layers are always visible

Even if the layer we are a duplicate of isn't visible.

M  +4    -0    krita/ui/flake/kis_shape_layer.cc

http://commits.kde.org/calligra/295a0039e8d7d83ebeb7fcca77759ad0bfe9b32c