Make sure duplicated vector layers are always visible

Even if the layer we are a duplicate of isn't visible.

BUG:301342